fix bugs in k-fold validation separate models for each fold

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -876,13 +876,15 @@
     "            \"Validation strategy must be one of: 'k-fold', 'leave-one-out', 'stratified'\"\n",
     "        self.validation_strategy = validation_strategy\n",
     "        self.kwargs = kwargs  # Store parameters like k, etc.\n",
+    "        self.random_state = np.random.RandomState(42)  # Add separate random state\n",
+    "\n",
     "\n",
     "    def get_folds(self, dataset: Dataset) -> list[tuple[np.ndarray, np.ndarray]]:\n",
     "        \"\"\"Returns list of (train_indices, val_indices) for the chosen strategy\"\"\"\n",
     "        if self.validation_strategy == \"k-fold\":\n",
     "            k = self.kwargs.get('k', 5)\n",
     "            indices = np.arange(len(dataset))\n",
-    "            np.random.shuffle(indices)\n",
+    "            self.random_state.shuffle(indices)\n",
     "            fold_size = len(dataset) // k\n",
     "            folds = []\n",
     "            for i in range(k):\n",
@@ -909,7 +911,7 @@
     "        self.optimizer = optimizer\n",
     "        self.visualizer = TrainingVisualizer()\n",
     "\n",
-    "    def train(self, train_loader: DataLoader, val_loader: DataLoader, epochs: int = 1000, log_interval:int = 200, show_plots:bool = True, patience: int = 20, min_delta: float = 1e-4, lr_scheduler: LRScheduler = ExponentialLRScheduler(0.01, gamma=0.99)) -> dict:\n",
+    "    def train(self, train_loader: DataLoader, val_loader: DataLoader, epochs: int = 1000, log_interval:int = 200, show_plots:bool = True, patience: int = 20, min_delta: float = 1e-4, lr_scheduler: LRScheduler = None, **kwargs) -> dict:\n",
     "        '''\n",
     "        Train the model using the specified loss function and optimizer.\n",
     "        The training loop consists of the following steps:\n",
@@ -930,10 +932,16 @@
     "            show_plots (bool): Whether to show the plots during training. Default is True.\n",
     "            patience (int): Number of epochs to wait for improvement before early stopping. Default is 10.\n",
     "            min_delta (float): Minimum change in the validation loss to qualify as an improvement. Default is 1e-4.\n",
-    "            lr_scheduler (LRScheduler): Learning rate scheduler to adjust the learning rate during training. Default is ExponentialLRScheduler with initial learning rate 0.01.\n",
+    "            lr_scheduler (LRScheduler): Learning rate scheduler to adjust the learning rate during training.\n",
+    "            **kwargs: Additional arguments (e.g., batch_size)\n",
     "        Returns:\n",
-    "            None\n",
+    "            dict: Training history containing loss, validation loss, training accuracy, and validation accuracy.\n",
     "        '''\n",
+    "        # If no scheduler provided, create default one\n",
+    "        if lr_scheduler is None:\n",
+    "            lr_scheduler = ExponentialLRScheduler(0.01, gamma=0.99)\n",
+    "\n",
+    "        \n",
     "        # Split the dataset into training and validation sets\n",
     "       # train_loader, val_loader = DataLoader.holdout_split(dataset,test_size=0.2)\n",
     "        epoch_times = []\n",
@@ -1045,17 +1053,53 @@
     "        fold_scores = []\n",
     "        best_model = None\n",
     "        best_score = float('inf')\n",
-    "    \n",
+    "        \n",
+    " \n",
+    "                \n",
+    "        # Store initial model architecture\n",
+    "        initial_architecture = [(layer.__class__, layer.input_dim, layer.output_dim) \n",
+    "                         if isinstance(layer, Linear) else layer.__class__ \n",
+    "                          for layer in self.model.layers]\n",
+    "\n",
+    "        # Set consistent batch size\n",
+    "        kwargs['batch_size'] = min(32, len(dataset) // 10)  # Smaller batches for stability\n",
+    "\n",
+    "        \n",
     "        for fold_idx, (train_idx, val_idx) in enumerate(cv.get_folds(dataset)):\n",
     "            print(f\"\\nTraining Fold {fold_idx + 1}\")\n",
     "        \n",
-    "            # Create fresh model for each fold\n",
-    "            self.model = copy.deepcopy(self.model)\n",
+    "            ## Create fresh model for each fold\n",
+    "            #self.model = copy.deepcopy(self.model)\n",
+    "            \n",
+    "            np.random.seed(42 + fold_idx)  # Consistent but different for each fold\n",
+    "                    \n",
+    "            layers = []\n",
+    "            for layer_info in initial_architecture:\n",
+    "                if isinstance(layer_info, tuple):\n",
+    "                    cls, in_dim, out_dim = layer_info\n",
+    "                    layers.append(cls(in_dim, out_dim))\n",
+    "                else:\n",
+    "                    layers.append(layer_info())    \n",
+    "            self.model = Sequential(layers)  \n",
+    "        \n",
+    "             # Create data loaders with consistent batch size\n",
+    "            train_loader = DataLoader(dataset, indices=train_idx, \n",
+    "                                batch_size=kwargs.get('batch_size', 32),\n",
+    "                                shuffle=True)\n",
+    "            val_loader = DataLoader(dataset, indices=val_idx,\n",
+    "                              batch_size=kwargs.get('batch_size', 32))\n",
+    "        \n",
+    "            # Use more conservative learning rate schedule\n",
+    "            kwargs['lr_scheduler'] = ExponentialLRScheduler(\n",
+    "                initial_lr=0.1,\n",
+    "                gamma=0.999 \n",
+    "            )\n",
+    "        \n",
     "        \n",
     "            # Train this fold\n",
     "            kwargs['show_plots'] = False  # Disable per-fold plots\n",
-    "            train_loader = DataLoader(dataset, indices=train_idx)\n",
-    "            val_loader = DataLoader(dataset, indices=val_idx)\n",
+    "           # train_loader = DataLoader(dataset, indices=train_idx)\n",
+    "           # val_loader = DataLoader(dataset, indices=val_idx)\n",
     "        \n",
     "            # Regular training but store history\n",
     "            history = self.train(train_loader, val_loader, **kwargs)\n",
@@ -1110,7 +1154,8 @@
     "                     epochs=1000, \n",
     "                     patience=100,\n",
     "                     log_interval=100,\n",
-    "                     lr_scheduler=ExponentialLRScheduler(0.1, gamma=0.999))\n",
+    "                     batch_size=32,\n",
+    "                     lr_scheduler=ExponentialLRScheduler(0.1, gamma=0.9995))\n",
     "\n",
     "# Create test loader and evaluate\n",
     "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=True)\n",
