description and plan update

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -15,7 +15,9 @@
     "\n",
     "> *This project is inspired by university coursework, but developed independently from scratch to reinforce my understanding and extend the ideas further.*\n",
     "\n",
-    "In case of any questions or comments, please contact me at ea.arseneva@gmail.com\n"
+    "Author: Elena Arseneva (ea.arseneva@gmail.com)\n",
+    "\n",
+    "Last modified: June 4, 2025\n"
    ]
   },
   {
@@ -34,7 +36,7 @@
     "- (DONE) ~~Decision boundary visualization during training~~    (2)\n",
     "- (DONE) ~~Loss and accuracy plots after training~~  (1)\n",
     "- (DONE) ~~Visual explanation of gradients and weight updates~~ (3)\n",
-    "- Interactive sliders for hyperparameters (learning rate, network architecture)                                        (12)\n",
+    "\n",
     "\n",
     "### Model Improvements\n",
     "- Batch normalization implementation                 (9)\n",
@@ -46,7 +48,8 @@
     "- Training history tracking and logging\n",
     "- Model checkpointing and saving\n",
     "- Comprehensive testing suite\n",
-    "- Performance optimization"
+    "- Performance optimization\n",
+    "- Interactive sliders for hyperparameters (learning rate, network architecture)                                        "
    ]
   },
   {
