organize imports logically

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -59,11 +59,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from abc import ABC, abstractmethod\n",
-    "import matplotlib.pyplot as plt\n",
+    "# Standard imports\n",
     "import time\n",
     "import copy\n",
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "# Third-party imports\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "from matplotlib.gridspec import GridSpecFromSubplotSpec \n",
     "\n",
     "# Set random seed for reproducibility\n",
