--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -63,6 +63,7 @@
     "import time\n",
     "import copy\n",
     "from abc import ABC, abstractmethod\n",
+    "from typing import List, Tuple, Optional, Union, Dict, Any\n",
     "\n",
     "# Third-party imports\n",
     "import numpy as np\n",
@@ -138,7 +139,7 @@
     "    the instances store their input and output dimensions.\n",
     "    '''\n",
     "    \n",
-    "    def __init__(self, input_dim=None, output_dim=None):\n",
+    "    def __init__(self, input_dim: Optional[int] = None, output_dim: Optional[int] = None) -> None:\n",
     "        self._input_dim = input_dim\n",
     "        self._output_dim = output_dim\n",
     "        self.input = None\n",
@@ -157,9 +158,9 @@
     "        \"\"\"\n",
     "        Forward pass through the layer.\n",
     "        Args:\n",
-    "            x (np.ndarray): Input data. The shape should be (batch_size, input_dim).\n",
+    "            x (np.ndarray): Input array of shape (batch_size, input_dim).\n",
     "        Returns:\n",
-    "            np.ndarray: Output data. The shape should be (batch_size, output_dim).\n",
+    "            np.ndarray: Output array of shape (batch_size, output_dim).\n",
     "        \"\"\"\n",
     "        pass\n",
     "\n",
@@ -248,7 +249,7 @@
     "    Applies the ReLU activation function element-wise to the input.\n",
     "    The ReLU function is defined as f(x) = max(0, x).\n",
     "    '''\n",
-    "    def __init__(self):\n",
+    "    def __init__(self) -> None:\n",
     "        super().__init__()\n",
     "        \n",
     "    def forward(self, x: np.ndarray) -> np.ndarray:\n",
@@ -267,7 +268,7 @@
     "    Applies a linear transformation to the input data.\n",
     "    The transformation is defined as y = xW + b, where W is the weight matrix and b is the bias vector.\n",
     "    '''\n",
-    "    def __init__(self, input_dim: int, output_dim: int):\n",
+    "    def __init__(self, input_dim: int, output_dim: int) -> None:\n",
     "        assert input_dim > 0 and output_dim > 0, \"Input and output dimensions of a Linear layer must be positive integers.\"\n",
     "        super().__init__(input_dim, output_dim)\n",
     "        # Initialize weights and bias\n",
@@ -311,12 +312,12 @@
     "    A container for stacking layers in a linear fashion.\n",
     "    The input to the first layer is the input to the model, and the output of the last layer is the output of the model.\n",
     "    '''\n",
-    "    def __init__(self, layers: list):\n",
+    "    def __init__(self, layers: list) -> None:\n",
     "        self.layers = layers\n",
     "        super().__init__(layers[0].input_dim, layers[-1].output_dim)\n",
     "        self.__check_consistency__()\n",
     "\n",
-    "    def __check_consistency__(self):\n",
+    "    def __check_consistency__(self) -> None:\n",
     "        assert len(self.layers) > 1, \"Sequential model must have at least one layer.\"\n",
     "        assert self.layers[0].input_dim is not None, \"First layer input dimension must be specified.\"\n",
     "        assert self.layers[-1].output_dim is not None, \"Last layer output dimension must be specified.\"\n",
@@ -445,7 +446,7 @@
     "    where params are the parameters to be updated, learning_rate is the learning rate, and grads are the gradients.\n",
     "    '''\n",
     "    \n",
-    "    def __init__(self, learning_rate: float = 0.01):\n",
+    "    def __init__(self, learning_rate: float = 0.01) -> None:\n",
     "        assert learning_rate > 0, \"Learning rate must be a positive number.\"\n",
     "        self.learning_rate = learning_rate\n",
     "\n",
@@ -554,14 +555,14 @@
     "    Dataset class to hold the data and labels.\n",
     "    It provides methods to access the data and labels by index.\n",
     "    '''\n",
-    "    def __init__(self, x: np.ndarray, y: np.ndarray):\n",
+    "    def __init__(self, x: np.ndarray, y: np.ndarray)-> None:\n",
     "        self.x = x\n",
     "        self.y = y\n",
     "\n",
-    "    def __len__(self):\n",
+    "    def __len__(self) -> int:\n",
     "        return len(self.x)\n",
     "\n",
-    "    def __getitem__(self, index):\n",
+    "    def __getitem__(self, index: Union[int, np.ndarray]) -> Tuple[np.ndarray, np.ndarray]:\n",
     "        assert isinstance(index, (int, np.ndarray)), \"Index must be an integer or a numpy array.\"\n",
     "        return self.x[index], self.y[index]\n",
     "    \n",
@@ -570,20 +571,20 @@
     "    DataLoader class to load the data in batches.\n",
     "    It provides methods to iterate over the data in batches.\n",
     "    '''\n",
-    "    def __init__(self, dataset: Dataset, indices = None, batch_size: int = 32, shuffle: bool = False) -> None:\n",
+    "    def __init__(self, dataset: Dataset, indices: Optional[np.ndarray] = None, batch_size: int = 32, shuffle: bool = False) -> None:\n",
     "        self.dataset = dataset\n",
     "        self.batch_size = batch_size\n",
     "        self.shuffle = shuffle\n",
     "        self.indices = indices if indices is not None else np.arange(len(dataset))\n",
     "        self.current_index = 0\n",
     "\n",
-    "    def __iter__(self):\n",
+    "    def __iter__(self) -> 'DataLoader':\n",
     "        self.current_index = 0\n",
     "        if self.shuffle:\n",
     "            np.random.shuffle(self.indices)\n",
     "        return self\n",
     "\n",
-    "    def __next__(self):\n",
+    "    def __next__(self)-> Tuple[np.ndarray, np.ndarray]:\n",
     "        if self.current_index >= len(self.indices):\n",
     "            raise StopIteration\n",
     "        start_index = self.current_index\n",
@@ -593,11 +594,11 @@
     "        self.current_index += self.batch_size\n",
     "        return x_batch, y_batch\n",
     "    \n",
-    "    def __len__(self):\n",
+    "    def __len__(self) -> int:\n",
     "        return int(np.ceil(len(self.indices) / self.batch_size))\n",
     "    \n",
     "    @staticmethod\n",
-    "    def holdout_split(dataset: Dataset, test_size: float = 0.2):\n",
+    "    def holdout_split(dataset: Dataset, test_size: float = 0.2) -> Tuple['DataLoader', 'DataLoader']:\n",
     "        \"\"\"\n",
     "        Splits the dataset into training and testing sets.\n",
     "        Args:\n",
@@ -632,7 +633,7 @@
     "    Abstract base class for learning rate schedulers.\n",
     "    Each scheduler should implement the get_lr method to compute the current learning rate.\n",
     "    '''\n",
-    "    def __init__(self, initial_lr: float):\n",
+    "    def __init__(self, initial_lr: float) -> None:\n",
     "        assert initial_lr > 0, \"Initial learning rate must be positive\"\n",
     "        self.initial_lr = initial_lr\n",
     "        self.current_step = 0\n",
@@ -658,15 +659,14 @@
     "\n",
     "class ExponentialLRScheduler(LRScheduler):\n",
     "    \"\"\"Exponentially decays learning rate by gamma every epoch\"\"\"\n",
-    "    def __init__(self, initial_lr: float, gamma: float = 0.95):\n",
-    "        super().__init__(initial_lr)\n",
+    "    def __init__(self, initial_lr: float, gamma: float = 0.95)-> None:\n",
     "        self.gamma = gamma\n",
     "        \n",
     "    def get_lr(self) -> float:\n",
     "        return self.initial_lr * (self.gamma ** self.current_step)\n",
     "    \n",
     "class WarmupLRScheduler(LRScheduler):\n",
-    "    def __init__(self, initial_lr: float, warmup_epochs: int = 50):\n",
+    "    def __init__(self, initial_lr: float, warmup_epochs: int = 50) -> None:\n",
     "        super().__init__(initial_lr)\n",
     "        self.warmup_epochs = warmup_epochs\n",
     "        \n",
@@ -695,7 +695,7 @@
     "    TrainingVisualizer class to store the training history and plot the loss and accuracy.\n",
     "    It provides methods to update the training history and plot the loss and accuracy.\n",
     "    '''\n",
-    "    def __init__(self):\n",
+    "    def __init__(self)->None:\n",
     "        self.history = {\n",
     "            'loss': [],\n",
     "            'val_loss': [],\n",
@@ -721,7 +721,7 @@
     "        self.history['train_acc'].append(train_acc)\n",
     "        self.history['val_acc'].append(val_acc)\n",
     "\n",
-    "    def plot_metrics_history(self):\n",
+    "    def plot_metrics_history(self) -> None:\n",
     "        '''\n",
     "        Plot the training history.\n",
     "        It plots the loss and accuracy for both training and validation sets.\n",
@@ -751,7 +751,7 @@
     "        plt.tight_layout()\n",
     "        plt.show()     \n",
     "    \n",
-    "    def plot_decision_boundary(self, model, x_train, y_train, ax=None):\n",
+    "    def plot_decision_boundary(self, model, x_train, y_train, ax=None)->None:\n",
     "        if ax is None:\n",
     "            fig, ax = plt.subplots(figsize=(8, 6))\n",
     "        \n",
@@ -870,7 +870,7 @@
     "            plt.show()\n",
     "    \n",
     "        \n",
-    "    def plot_loss_landscape(self, model: Sequential, loader: DataLoader, loss_fn: Loss, ax=None):\n",
+    "    def plot_loss_landscape(self, model: Sequential, loader: DataLoader, loss_fn: Loss, ax=None)->None:\n",
     "        \"\"\"Visualize loss landscape around current weights\"\"\"\n",
     "        if ax is None:\n",
     "            fig, ax = plt.subplots(figsize=(8, 6))\n",
@@ -916,16 +916,16 @@
     "\n",
     "class KFoldVisualizer(TrainingVisualizer):\n",
     "    \"\"\"Extended visualizer for k-fold cross validation\"\"\"\n",
-    "    def __init__(self, k_folds: int):\n",
+    "    def __init__(self, k_folds: int) -> None:\n",
     "        super().__init__()\n",
     "        self.k_folds = k_folds\n",
     "        self.fold_histories = []\n",
     "        \n",
-    "    def add_fold_history(self, fold_history: dict):\n",
+    "    def add_fold_history(self, fold_history: dict) ->None:\n",
     "        \"\"\"Store history for one fold\"\"\"\n",
     "        self.fold_histories.append(fold_history)\n",
     "    \n",
-    "    def plot_k_fold_results(self):\n",
+    "    def plot_k_fold_results(self)-> None:\n",
     "        \"\"\"Plot aggregated results across folds\"\"\"\n",
     "        fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 5))\n",
     "        \n",
@@ -975,7 +975,7 @@
     "# In progress\n",
     "\n",
     "class CrossValidator:\n",
-    "    def __init__(self, validation_strategy: str = \"k-fold\", **kwargs):\n",
+    "    def __init__(self, validation_strategy: str = \"k-fold\", **kwargs) -> None:\n",
     "        assert validation_strategy in [\"k-fold\", \"leave-one-out\", \"stratified\"],\\\n",
     "            \"Validation strategy must be one of: 'k-fold', 'leave-one-out', 'stratified'\"\n",
     "        self.validation_strategy = validation_strategy\n",
@@ -983,7 +983,7 @@
     "        self.random_state = np.random.RandomState(42)  # Add separate random state\n",
     "\n",
     "\n",
-    "    def get_folds(self, dataset: Dataset) -> list[tuple[np.ndarray, np.ndarray]]:\n",
+    "    def get_folds(self, dataset: Dataset) -> List[tuple[np.ndarray, np.ndarray]]:\n",
     "        \"\"\"Returns list of (train_indices, val_indices) for the chosen strategy\"\"\"\n",
     "        if self.validation_strategy == \"k-fold\":\n",
     "            k = self.kwargs.get('k', 5)\n",
@@ -1053,7 +1053,7 @@
     "                    }\n",
     "            weight_stats.append(stats)\n",
     "        \n",
-    "        def validate_metrics(loss, val_loss, acc):\n",
+    "        def validate_metrics(loss, val_loss, acc) -> None:\n",
     "            \"\"\"Helper function to validate metrics\"\"\"\n",
     "            if np.isnan(loss) or np.isinf(loss):\n",
     "                raise ValueError(f\"Training loss is {loss}\")\n",
@@ -1263,7 +1263,7 @@
     "        return np.mean(running_acc) if running_acc else 0.0  # Return mean of the last few accuracies\n",
     "    \n",
     "    \n",
-    "    def train_with_cv(self, dataset: Dataset, cv: CrossValidator, **kwargs):\n",
+    "    def train_with_cv(self, dataset: Dataset, cv: CrossValidator, **kwargs) -> Dict[str, Any]:\n",
     "        \"\"\"Train with cross-validation and return the best model\"\"\"\n",
     "        cv_visualizer = KFoldVisualizer(len(cv.get_folds(dataset)))\n",
     "        fold_scores = []\n",
@@ -1377,7 +1377,14 @@
     "    \n",
     "        mean_score = np.mean(fold_scores)\n",
     "        std_score = np.std(fold_scores)\n",
-    "        print(f\"\\nCross-validation score: {mean_score:.4f} ± {std_score:.4f}\")"
+    "        print(f\"\\nCross-validation score: {mean_score:.4f} ± {std_score:.4f}\")\n",
+    "        return {\n",
+    "            'mean_score': mean_score,\n",
+    "            'std_score': std_score,\n",
+    "            'best_model': best_model,\n",
+    "            'fold_scores': fold_scores,\n",
+    "            'visualizer': cv_visualizer\n",
+    "        }"
    ]
   },
   {
