type hints finished

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -97,7 +97,7 @@
     "    exp_x = np.exp(x - np.max(x, axis=1, keepdims=True))\n",
     "    return exp_x / np.sum(exp_x, axis=1, keepdims=True)\n",
     "\n",
-    "def generate_spiral_data(n_points_per_class: int, n_classes: int):\n",
+    "def generate_spiral_data(n_points_per_class: int, n_classes: int) -> Tuple[np.ndarray, np.ndarray]:\n",
     "    '''\n",
     "    Generate spiral data for classification.\n",
     "    n_points_per_class: number of points per class\n",
@@ -145,11 +145,11 @@
     "        self.input = None\n",
     "\n",
     "    @property\n",
-    "    def input_dim(self):\n",
+    "    def input_dim(self) -> Optional[int]:\n",
     "        return self._input_dim\n",
     "\n",
     "    @property\n",
-    "    def output_dim(self):\n",
+    "    def output_dim(self) -> Optional[int]:\n",
     "        return self._output_dim\n",
     "    \n",
     "    \n",
@@ -184,7 +184,7 @@
     "    '''\n",
     "    \n",
     "    @abstractmethod\n",
-    "    def forward(self, y_true: np.ndarray, y_pred: np.ndarray) -> tuple:\n",
+    "    def forward(self, y_true: np.ndarray, y_pred: np.ndarray) -> Tuple[float, np.ndarray]:\n",
     "        \"\"\"\n",
     "        Forward pass through the loss function.\n",
     "        Args:\n",
@@ -312,7 +312,7 @@
     "    A container for stacking layers in a linear fashion.\n",
     "    The input to the first layer is the input to the model, and the output of the last layer is the output of the model.\n",
     "    '''\n",
-    "    def __init__(self, layers: list) -> None:\n",
+    "    def __init__(self, layers: List[Layer]) -> None:\n",
     "        self.layers = layers\n",
     "        super().__init__(layers[0].input_dim, layers[-1].output_dim)\n",
     "        self.__check_consistency__()\n",
@@ -467,7 +467,7 @@
     "perform_simple_training = False\n",
     "\n",
     "\n",
-    "def simple_train(model: Sequential, loss_fn: Loss, optimizer: Optimizer, x_train: np.ndarray, y_train: np.ndarray, batch_size: int = 32, epochs: int = 1000):\n",
+    "def simple_train(model: Sequential, loss_fn: Loss, optimizer: Optimizer, x_train: np.ndarray, y_train: np.ndarray, batch_size: int = 32, epochs: int = 1000) -> None:\n",
     "    '''\n",
     "    Train the model using the specified loss function and optimizer. No cross-validation is performed.\n",
     "    The training loop consists of the following steps:\n",
@@ -660,6 +660,7 @@
     "class ExponentialLRScheduler(LRScheduler):\n",
     "    \"\"\"Exponentially decays learning rate by gamma every epoch\"\"\"\n",
     "    def __init__(self, initial_lr: float, gamma: float = 0.95)-> None:\n",
+    "        super().__init__(initial_lr)\n",
     "        self.gamma = gamma\n",
     "        \n",
     "    def get_lr(self) -> float:\n",
@@ -751,7 +752,7 @@
     "        plt.tight_layout()\n",
     "        plt.show()     \n",
     "    \n",
-    "    def plot_decision_boundary(self, model, x_train, y_train, ax=None)->None:\n",
+    "    def plot_decision_boundary(self, model, x_train, y_train, ax: Optional[plt.Axes] = None) -> None:\n",
     "        if ax is None:\n",
     "            fig, ax = plt.subplots(figsize=(8, 6))\n",
     "        \n",
@@ -803,7 +804,7 @@
     "        if ax is None:\n",
     "            plt.show()\n",
     "        \n",
-    "    def weights_gradients_heatmap(self, model: Sequential, optimizer: Optimizer, ax=None) -> None:\n",
+    "    def weights_gradients_heatmap(self, model: Sequential, optimizer: Optimizer, ax: Optional[plt.Axes]=None) -> None:\n",
     "        '''\n",
     "        Plot the weights and their updates during training.\n",
     "        Args:\n",
@@ -870,7 +871,7 @@
     "            plt.show()\n",
     "    \n",
     "        \n",
-    "    def plot_loss_landscape(self, model: Sequential, loader: DataLoader, loss_fn: Loss, ax=None)->None:\n",
+    "    def plot_loss_landscape(self, model: Sequential, loader: DataLoader, loss_fn: Loss, ax: Optional[plt.Axes]=None)->None:\n",
     "        \"\"\"Visualize loss landscape around current weights\"\"\"\n",
     "        if ax is None:\n",
     "            fig, ax = plt.subplots(figsize=(8, 6))\n",
@@ -983,7 +984,7 @@
     "        self.random_state = np.random.RandomState(42)  # Add separate random state\n",
     "\n",
     "\n",
-    "    def get_folds(self, dataset: Dataset) -> List[tuple[np.ndarray, np.ndarray]]:\n",
+    "    def get_folds(self, dataset: Dataset) -> List[Tuple[np.ndarray, np.ndarray]]:\n",
     "        \"\"\"Returns list of (train_indices, val_indices) for the chosen strategy\"\"\"\n",
     "        if self.validation_strategy == \"k-fold\":\n",
     "            k = self.kwargs.get('k', 5)\n",
@@ -1009,13 +1010,13 @@
     "# class Trainer that governs the training process, using the DataLoader, ValidationStrategy, and Optimizer\n",
     "\n",
     "class Trainer:\n",
-    "    def __init__(self, model: Sequential, loss_fn: Loss, optimizer: Optimizer):\n",
+    "    def __init__(self, model: Sequential, loss_fn: Loss, optimizer: Optimizer) -> None:\n",
     "        self.model = model\n",
     "        self.loss_fn = loss_fn\n",
     "        self.optimizer = optimizer\n",
     "        self.visualizer = TrainingVisualizer()\n",
     "\n",
-    "    def train(self, train_loader: DataLoader, val_loader: DataLoader, epochs: int = 1000,  show_plots_logs:bool = True, log_interval:int = 200, patience: int = 20, min_delta: float = 1e-4, lr_scheduler: LRScheduler = None, debug: bool = False, **kwargs) -> dict:\n",
+    "    def train(self, train_loader: DataLoader, val_loader: DataLoader, epochs: int = 1000,  show_plots_logs:bool = True, log_interval:int = 200, patience: int = 20, min_delta: float = 1e-4, lr_scheduler: LRScheduler = None, debug: bool = False, **kwargs) -> Dict[str, List[float]]:\n",
     "        '''\n",
     "        Train the model using the specified loss function and optimizer.\n",
     "        The training loop consists of the following steps:\n",
@@ -1053,7 +1054,7 @@
     "                    }\n",
     "            weight_stats.append(stats)\n",
     "        \n",
-    "        def validate_metrics(loss, val_loss, acc) -> None:\n",
+    "        def validate_metrics(loss: float, val_loss: float, acc: float) -> None:\n",
     "            \"\"\"Helper function to validate metrics\"\"\"\n",
     "            if np.isnan(loss) or np.isinf(loss):\n",
     "                raise ValueError(f\"Training loss is {loss}\")\n",
