types odne done

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -752,7 +752,7 @@
     "        plt.tight_layout()\n",
     "        plt.show()     \n",
     "    \n",
-    "    def plot_decision_boundary(self, model, x_train, y_train, ax: Optional[plt.Axes] = None) -> None:\n",
+    "    def plot_decision_boundary(self, model: Sequential, x_train: np.ndarray, y_train: np.ndarray, ax: Optional[plt.Axes] = None) -> None:\n",
     "        if ax is None:\n",
     "            fig, ax = plt.subplots(figsize=(8, 6))\n",
     "        \n",
@@ -1016,7 +1016,7 @@
     "        self.optimizer = optimizer\n",
     "        self.visualizer = TrainingVisualizer()\n",
     "\n",
-    "    def train(self, train_loader: DataLoader, val_loader: DataLoader, epochs: int = 1000,  show_plots_logs:bool = True, log_interval:int = 200, patience: int = 20, min_delta: float = 1e-4, lr_scheduler: LRScheduler = None, debug: bool = False, **kwargs) -> Dict[str, List[float]]:\n",
+    "    def train(self, train_loader: DataLoader, val_loader: DataLoader, epochs: int = 1000,  show_plots_logs:bool = True, log_interval:int = 200, patience: int = 20, min_delta: float = 1e-4, lr_scheduler: Optional[LRScheduler] = None, debug: bool = False, **kwargs) -> Dict[str, List[float]]:\n",
     "        '''\n",
     "        Train the model using the specified loss function and optimizer.\n",
     "        The training loop consists of the following steps:\n",
@@ -1264,7 +1264,7 @@
     "        return np.mean(running_acc) if running_acc else 0.0  # Return mean of the last few accuracies\n",
     "    \n",
     "    \n",
-    "    def train_with_cv(self, dataset: Dataset, cv: CrossValidator, **kwargs) -> Dict[str, Any]:\n",
+    "    def train_with_cv(self, dataset: Dataset, cv: CrossValidator, **kwargs) -> Dict[str, Union[float, List[float], Sequential, KFoldVisualizer]]:\n",
     "        \"\"\"Train with cross-validation and return the best model\"\"\"\n",
     "        cv_visualizer = KFoldVisualizer(len(cv.get_folds(dataset)))\n",
     "        fold_scores = []\n",
