cleanup methods for trainer

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -1385,7 +1385,18 @@
     "            'best_model': best_model,\n",
     "            'fold_scores': fold_scores,\n",
     "            'visualizer': cv_visualizer\n",
-    "        }"
+    "        }\n",
+    "        \n",
+    "    def cleanup(self):\n",
+    "        \"\"\"Release resources and reset state\"\"\"\n",
+    "        plt.close('all')\n",
+    "        self.visualizer = TrainingVisualizer()\n",
+    "        \n",
+    "    def __enter__(self):\n",
+    "        return self\n",
+    "        \n",
+    "    def __exit__(self, exc_type, exc_val, exc_tb):\n",
+    "        self.cleanup()"
    ]
   },
   {
