fix figure overlapping labels

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -827,48 +827,54 @@
     "    \n",
     "        # Create figure with subplots for each layer\n",
     "        if ax is None:\n",
-    "            fig, axes = plt.subplots(num_layers, 2, figsize=(12, 4 * num_layers))\n",
-    "            if num_layers == 1:  # Handle the case of single layer\n",
-    "                if not isinstance(axes, np.ndarray):\n",
-    "                    axes = np.array([[axes]])\n",
-    "                else:\n",
-    "                    axes = axes.reshape(1, 2)\n",
-    "        else:\n",
-    "            fig = ax.figure\n",
-    "            gs_inner = GridSpecFromSubplotSpec(num_layers, 2, subplot_spec=ax.get_subplotspec())\n",
+    "            fig = plt.figure(figsize=(12, 4 * num_layers + 1))  # Add extra space for title\n",
+    "            fig.patch.set_visible(False)\n",
+    "            gs = fig.add_gridspec(num_layers, 2, hspace=0.6, height_ratios=[1]*num_layers)\n",
     "            axes = np.empty((num_layers, 2), dtype=object)\n",
     "            for i in range(num_layers):\n",
-    "                axes[i, 0] = fig.add_subplot(gs_inner[i, 0])\n",
-    "                axes[i, 1] = fig.add_subplot(gs_inner[i, 1])\n",
-    "                #axes = ax if num_layers > 1 else ax.reshape(1, 2)\n",
+    "                axes[i, 0] = fig.add_subplot(gs[i, 0])\n",
+    "                axes[i, 1] = fig.add_subplot(gs[i, 1])\n",
+    "        else:\n",
+    "            fig = ax.get_figure()\n",
+    "            gs = GridSpecFromSubplotSpec(num_layers, 2, subplot_spec=ax.get_subplotspec(), hspace=0.6)\n",
+    "            axes = np.empty((num_layers, 2), dtype=object)\n",
+    "            for i in range(num_layers):\n",
+    "                axes[i, 0] = fig.add_subplot(gs[i, 0])\n",
+    "                axes[i, 1] = fig.add_subplot(gs[i, 1])\n",
     "        \n",
-    "         # Plot each hidden layer\n",
     "        for i, (layer_num, layer) in enumerate(linear_layers):\n",
-    "            # 1. Plot normalized weights\n",
+    "            # Left plot - weights\n",
     "            weights_norm = layer.weights / np.abs(layer.weights).max()\n",
     "            im1 = axes[i, 0].imshow(weights_norm, cmap='RdBu', vmin=-1, vmax=1)\n",
-    "            axes[i, 0].set_title(f'Layer {layer_num} Weights\\nMax abs value: {np.abs(layer.weights).max():.4f}')\n",
-    "            plt.colorbar(im1, ax=axes[i, 0])\n",
+    "            axes[i, 0].set_title(f'Layer {layer_num} Weights\\nMax abs value: {np.abs(layer.weights).max():.4f}', \n",
+    "                            pad=10)\n",
+    "            fig.colorbar(im1, ax=axes[i, 0])\n",
     "\n",
-    "            # 2. Plot gradient-based updates if available\n",
+    "            # Right plot - updates\n",
     "            if layer.grad_weights is not None:\n",
     "                update = optimizer.learning_rate * layer.grad_weights\n",
     "                update_norm = update / np.abs(update).max() if np.abs(update).max() > 0 else update\n",
     "                im2 = axes[i, 1].imshow(update_norm, cmap='RdBu', vmin=-1, vmax=1)\n",
-    "                axes[i, 1].set_title(f'Layer {layer_num} Updates (lr={optimizer.learning_rate})\\nMax abs value: {np.abs(update).max():.4f}')\n",
-    "                plt.colorbar(im2, ax=axes[i, 1])\n",
+    "                axes[i, 1].set_title(f'Layer {layer_num} Updates (lr={optimizer.learning_rate:.6f})\\nMax abs value: {np.abs(update).max():.4f}', \n",
+    "                                pad=10)\n",
+    "                fig.colorbar(im2, ax=axes[i, 1])\n",
     "\n",
-    "            # Add labels\n",
-    "            axes[i, 0].set_xlabel('Output features')\n",
-    "            axes[i, 0].set_ylabel('Input features')\n",
-    "            axes[i, 1].set_xlabel('Output features')\n",
-    "            axes[i, 1].set_ylabel('Input features')\n",
+    "            # Add labels with consistent spacing\n",
+    "            for ax in [axes[i, 0], axes[i, 1]]:\n",
+    "                ax.set_xlabel('Output features', labelpad=10)\n",
+    "                ax.set_ylabel('Input features', labelpad=10)\n",
+    "            \n",
+    "            # Adjust tick labels if needed\n",
+    "            for ax in [axes[i, 0], axes[i, 1]]:\n",
+    "                ax.tick_params(axis='both', which='major', labelsize=8)\n",
     "\n",
     "        plt.suptitle('Weight Values and Their Updates', y=1.02, fontsize=14)\n",
     "    \n",
     "        if ax is None:\n",
-    "            plt.tight_layout()\n",
+    "            plt.tight_layout(rect=[0, 0.03, 1, 0.95])  # Adjust layout to prevent overlap\n",
     "            plt.show()\n",
+    "        \n",
+    "    \n",
     "    \n",
     "        \n",
     "    def plot_loss_landscape(self, model: Sequential, loader: DataLoader, loss_fn: Loss, ax: Optional[plt.Axes]=None)->None:\n",
@@ -1094,7 +1100,7 @@
     "            n_samples = 0\n",
     "            \n",
     "            current_lr = lr_scheduler.get_lr()\n",
-    "            print(f\"Epoch {epoch}, LR: {current_lr:.6f}\") if epoch % log_interval == 0 else None\n",
+    "           # print(f\"Epoch {epoch}, LR: {current_lr:.6f}\") if epoch % log_interval == 0 else None\n",
     "            \n",
     "            self.optimizer.update_learning_rate(current_lr)\n",
     "            \n",
@@ -1181,6 +1187,7 @@
     "                \n",
     "                # Create a figure with subplots for all visualizations\n",
     "                fig = plt.figure(figsize=(15, 12))\n",
+    "                fig.set_facecolor('none')\n",
     "                gs = plt.GridSpec(3, 2, height_ratios=[1, 1, 1])\n",
     "            \n",
     "                # Decision boundary\n",
